# meteo

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dashboard  Dockerfile.reporter  Dockerfile.triangulation  INSTALL.md  README.md  astro_twilight_utils.py  astro_utils.py  authorize_youtube.py  auto_update.sh  constellation_drawer.py  constellation_drawer_astrometry.py  convert_detections_mp4_to_mov.py  dashboard.py  dashboard_camera_handlers.py  dashboard_config.py  dashboard_routes.py  dashboard_templates.py  dashboard_templates_settings.py  demo_triangulation.py  detection_filters.py  detection_state.py  detection_store.py  docker-compose.yml  docker-compose.yml.sample  generate_compose.py  go2rtc.yaml  go2rtc.yaml.sample  http_handlers.py  imo_meteor_calender.json  install.sh  meteor-docker.sh  meteor_detector.py  meteor_detector_common.py  meteor_detector_realtime.py  (+15 more)
.claude/: settings.json  settings.local.json
documents/: API_REFERENCE.md  ARCHITECTURE.md  ASTRO_UTILS.md  CONFIGURATION_GUIDE.md  DETECTION_STORE.md  DETECTION_TUNING.md  DETECTOR_COMPONENTS.md  DOCKER_ARCHITECTURE.md  OPERATIONS_GUIDE.md  SCRIPTS_REFERENCE.md  SECURITY.md  SETUP_GUIDE.md  TRIANGULATION.md  hugo_triangulation_article.md  hugo_youtube_article.md  index.md  qitta_article.md  (+2 more)
scaffold/meteo-box/: README.md  pyproject.toml
scaffold/meteo-box/app/: main.py
scaffold/meteo-box/src/meteo_box/: __init__.py
scaffold/meteo-core/: README.md  pyproject.toml
scaffold/meteo-core/src/meteo_core/: __init__.py
scaffold/meteo-core/tests/: test_import.py
(+78 files in other folders)
