[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteo-box"
version = "0.1.0"
description = "Commercial product layer for meteo"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Masanori Sakai" }]
dependencies = [
  "meteo-core>=0.1.0,<0.2.0",
  "fastapi",
  "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
