[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteo-core"
version = "0.1.0"
description = "Core meteor detection logic extracted from meteo"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Masanori Sakai" }]
dependencies = [
  "opencv-python",
  "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
